--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>29 - Raging sea</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <title>Raging Sea</title>
+  </head>
+  <body>
     <canvas class="webgl"></canvas>
-</body>
+  </body>
 </html>
